2003-05-30  John Lash  <jlash@speakeasy.net>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Add missing \ at end of line so that
	exec of gnudoit does not fail.

2003-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project):
	Introduce a short delay between the file
	parse and the invocation of the xref
	process. This lets the symbol browser
	be mapped before any xref files are
	scanned under Win95/98.

2003-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/window.tcl (center): Use reqwidth and
	reqheight when calculating window size during
	window centering operation. The previous code
	tried to query the configured width and height
	of the window. This approach was failing under
	Win32 because the default platform window min
	size was being returned in the interval before
	the window was mapped.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add basic
	local variable support. Use the searchtable
	implementation that was just moved into
	libcommon.a to support variable lookups.
	Add support for the global keyword.
	Add FUNCTION condition support to variable
	read and write rules.
	* tests/parsers/php.test: Add a series of
	variable definition and xref tests. Check
	global variable, local variable, and the
	global keyword.
	* tests/parsers/testutil.tcl: Add new
	php_parse_local_xref helper method that
	passes the -l flag to phpbrowser.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe): Switch xref
	pipe back to blocking mode before closing
	so that stderr messages are not lost due to
	a nasty Tcl bug.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/Makefile.am: Remove ref to srchtbl.c.
	* db/Makefile.in: Regen.
	* db/srchtbl.c:
	* db/srchtbl.h: Moved to parsers/common
	so that each of the browsers have
	access to a hashtable implementation.
	* parsers/common/Makefile.am: Add srchtbl.c