@@ -1,3 +1,9 @@
+2003-05-31  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* tests/parsers/php.test: Add an additional
+	test for function with default arguments
+	and some FIXME notes at the end of the file.
+
 2003-05-30  John Lash  <jlash@speakeasy.net>
 
 	* gui/emacs.tcl (sn_ensure_emacs_running):
